--- a/src/style/text.css
+++ b/src/style/text.css
@@ -25,11 +25,11 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-  font-size: 120px;
+  font-size: 9vw;
 }
 
 h2 {
-  font-size: 52px;
+  font-size: 5vw;
 }
 
 h3 {
@@ -60,6 +60,7 @@ h3 {
 
 .description {
   text-align: center;
+  padding-top: 5vw;
 }
 
 .letter {
